--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
 
   <title>Projeto Redes Sociais</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <h1>Ola, Mundo!!</h1>
+    <main>
+      <section id="phone">
+
+      </section>
+      <section id="redes-cosiais">
+
+      </section>
+    </main>
 </body>
 </html>
