--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
       <section id="phone">
-
+          <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
       </section>
       <section id="redes-cosiais">
 
